<resources>
    <string name="app_name">JALC</string>
    <string name="interest_rate">Interest rate (percentage)</string>
    <string name="number_of_months">Period- number of months</string>
    <string name="loan">Loan amount</string>
    <string name="taxes_after_loan">After property taxes</string>
    <string name="one_year_taxes">Annual property taxes</string>
    <string name="every_month_taxes">Monthly property taxes</string>
    <string name="taxes_before_loan">Before property taxes</string>
    <string name="calculate">Calculate</string>
    <string name="compare">Compare</string>
    <string name="easy_loan_calculator_result">JALC - Result</string>
    <string name="taxes_total">Total taxes:</string>
    <string name="anual_percentage_r">Annual percentage rate:</string>
    <string name="montly_paymant_n">Monthly payment:</string>
    <string name="montly_paymant_m">Monthly payment + taxes:</string>
    <string name="loan_amount">Loan amount: </string>
    <string name="total_interests_n">Total interests:</string>
    <string name="total_p">Total paymants:</string>
    <string name="new_loan">New loan</string>
    <string name="schedule">Schedule</string>
    <string name="create_pdf">Creating PDF</string>
    <string name="email">Send email</string>
    <string name="apr_max">APR more then 50%</string>
    <string name="complete_settings">Complete settings</string>
    <string name="min_loan">Minimum loans 2</string>
    <string name="max_com_l">Maximum comparable loans: 2</string>
    <string name="max_com_2">Minimum comparable loans: 2</string>
    <string name="select_loans">Select loans to compare:</string>
    <string name="apr_c">APR:</string>
    <string name="loan1">Loan 1</string>
    <string name="loan2">Loan 2</string>
    <string name="am">Amount</string>
    <string name="ti">Total interest</string>
    <string name="tt">Total taxes</string>
    <string name="tp">Total paymants</string>
    <string name="cancel">Cancel</string>
    <string name="loanCheck">Loan:</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="no_data">No data!</string>
    <string name="loan_check">Loan:</string>
    <string name="result">Result</string>
    <string name="select_loan_pdf">Select loan- PDF</string>
    <string name="pdf_create_document">PDF create in Document directory</string>
    <string name="choos_one_loan">Choose one loan</string>
    <string name="select_loan_email">Select loan- Email</string>
    <string name="generate_email">Generate Email</string>
    <string name="change_loan">Change loan</string>
    <string name="select_loan">Select loan</string>
    <string name="loan_schedule">Loan schedule</string>
    <string name="anual_percentage">Anual percentage rate:</string>
    <string name="monthly_payment">Monthly payment:</string>
    <string name="total_interest">Total interest:</string>
    <string name="total_taxes">Total taxes:</string>
    <string name="total_payments">Total paymants:</string>
    <string name="pdf_jalc">Created from JALC, @broforce42</string>
    <string name="loan_interest">Loan interest</string>
    <string name="loan_principal">Loan principal</string>
    <string name="actual_balance">Actual balance</string>
    <string name="no_email_client">There is no email client installed</string>
    <string name="pick_provider">Pick an Email provider</string>
    <string name="set_two_loans">Set 2 loans</string>
    <string name="amount">Amount</string>
    <string name="interest">Interest</string>
    <string name="taxes">Taxes</string>
    <string name="mon">MON</string>
    <string name="intx">INT</string>
    <string name="pr">PR</string>
    <string name="ab">AB</string>
    <string name="about_jalc">About JALC</string>
    <string name="ok">OK</string>
    <string name="set_one_loan">Set one loan</string>
    <string name="principal">Principal</string>
    <string name="months">Months:</string>
    <string name="jalc_help">JALC- HELP</string>
    <string name="how_set_data">How set data</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="pdf">PDF</string>
    <string name="change">Change</string>
    <string name="email_m">Email</string>
</resources>
